2009-04-13	Mike Massonnet
Add (invisible) option in the action settings dialog

	- panel-plugin/settings-dialog.glade:
		Add a new checkbox for individual actions "Activate only on
		default clipboard" to restrict the use of an action only when
		manually copied (for instance a URL pattern). For the moment
		this setting is left unimplemented, but there so it can
		already be translated for the time being.

2009-04-13	Mike Massonnet
Add Inhibit option in the Clipman menu

	- panel-plugin/collector.c, panel-plugin/collector.h:
		Add a GObject property inhibit and ignore changes happening on
		the clipboards in the clipboard owner changes callback if it is
		set to TRUE.
		Add a public function clipman_collector_inhibit().
	- panel-plugin/menu.c:
		Add a Enable check item in the menu. Use libexo to bind the
		inhibit property of ClipmanCollector to the active property of
		the check item -- with a negation as inhibit on TRUE would mean
		disabled.
	- panel-plugin/main.c:
		Bind the inhibit property of ClipmanCollector to the new xfconf
		property inhibit.

2009-04-13	Mike Massonnet
Set ownership on CLIPBOARD_MANAGER

	- panel-plugin/main.c:
		Add a panel plugin check function and acquire ownership on the
		X11 Selection CLIPBOARD_MANAGER. Quit the application if there
		is an application already with the ownership. This part follows
		the "clipboard manager spec" from freedesktop, but it doesn't
		implement the possibility to be replaced by another manager.
	- panel-plugin/main.c(plugin_preinit):
		Set human readable name for the application if run in the
		notification area.

2009-04-13	Mike Massonnet
Make the plugin run as a standalone application

	- panel-plugin/main.c:
		Rename panel-plugin.c to main.c and use the Full register
		function from libxfce4panel to check if the plugin is run from
		the command line and build a status icon instead of the panel
		plugin with a button.
	- panel-plugin/Makefile.am:
		Install the plugin to bindir.