@@ -82,6 +82,12 @@ dnl *** Makefile outputs ***
 dnl ************************
 AC_OUTPUT([
 Makefile
+icons/Makefile
+icons/16x16/Makefile
+icons/22x22/Makefile
+icons/24x24/Makefile
+icons/32x32/Makefile
+icons/scalable/Makefile
 panel-plugin/Makefile
 tests/Makefile
 po/Makefile.in
