@@ -1,0 +1,3 @@
+iconsdir = $(datadir)/icons/hicolor/32x32/apps
+icons_DATA = xfce4-clipman-plugin.png
+EXTRA_DIST = $(icons_DATA)
