@@ -1,0 +1,3 @@
+iconsdir = $(datadir)/icons/hicolor/scalable/apps
+icons_DATA = xfce4-clipman-plugin.svg
+EXTRA_DIST = $(icons_DATA)
