@@ -262,7 +262,7 @@ status_icon_register ()
   MyPlugin *plugin = plugin_register ();
 
   /* Status Icon */
-  plugin->status_icon = gtk_status_icon_new_from_stock (GTK_STOCK_PASTE);
+  plugin->status_icon = gtk_status_icon_new ();
   gtk_status_icon_set_tooltip (plugin->status_icon, _("Clipman"));
   g_idle_add ((GSourceFunc)cb_status_icon_is_embedded, plugin->status_icon);
 
@@ -328,7 +328,9 @@ cb_status_icon_set_size (MyPlugin *plugin, gint size)
 {
   GdkPixbuf *pixbuf;
  
-  pixbuf = xfce_themed_icon_load (GTK_STOCK_PASTE, size);
+  pixbuf = xfce_themed_icon_load ("xfce4-clipman-plugin", size);
+  if (pixbuf == NULL)
+    pixbuf = xfce_themed_icon_load (GTK_STOCK_PASTE, size);
   gtk_status_icon_set_from_pixbuf (plugin->status_icon, pixbuf);
   g_object_unref (G_OBJECT (pixbuf));
 
@@ -386,7 +388,9 @@ panel_plugin_set_size (MyPlugin *plugin,
 
   size -= 2 + 2 * MAX (plugin->button->style->xthickness,
                        plugin->button->style->ythickness);
-  pixbuf = xfce_themed_icon_load (GTK_STOCK_PASTE, size);
+  pixbuf = xfce_themed_icon_load ("xfce4-clipman-plugin", size);
+  if (pixbuf == NULL)
+    pixbuf = xfce_themed_icon_load (GTK_STOCK_PASTE, size);
   gtk_image_set_from_pixbuf (GTK_IMAGE (plugin->image), pixbuf);
   g_object_unref (G_OBJECT (pixbuf));
 
