@@ -10,7 +10,7 @@
     <property name="default_width">300</property>
     <property name="default_height">380</property>
     <property name="destroy_with_parent">True</property>
-    <property name="icon_name">gtk-paste</property>
+    <property name="icon_name">xfce4-clipman-plugin</property>
     <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
     <property name="subtitle" translatable="yes">Configure the plugin</property>
